# nassau-mangrove2

./: .gitignore  .gitmodules  BUILD.md  CLAUDE.md  CMakeLists.txt  PHASE_1_STATUS.md  PHASE_3_COMPLETION.md  VST3_FACTORY_FIX_SUMMARY.md
.cache/clangd/index/: IControl.cpp.6EF8DEA61A776112.idx  IControl.h.7D4D7429467FB289.idx  IGraphics.h.FB9EBFE78703440D.idx  IGraphicsConstants.h.C934373A02B65BF1.idx  IGraphicsCoreText.h.9A3F35A09AE107A9.idx  IGraphicsEditorDelegate.h.2C75DEFAB28EF29C.idx  IGraphicsMac.h.1EF97FA889081C6C.idx  IGraphicsMac.mm.CDDE12A8291B07A1.idx  IGraphicsMac_view.h.666BB6C495710796.idx  IGraphicsMac_view.mm.AAE1735F82040790.idx  IGraphicsNanoVG.cpp.C8D8DB9837BD9064.idx  IGraphicsNanoVG.h.315881631346D3DA.idx  IGraphicsPopupMenu.h.06ADE37771A6F2F5.idx  IGraphicsPrivate.h.6CCAD2FC328EAA98.idx  IGraphicsStructs.h.F2AB20E9CC6C4462.idx  IGraphicsUtilities.h.D6C02AEBF1357E45.idx  IGraphics_include_in_plug_hdr.h.4EF0C12B12A9059B.idx  IGraphics_include_in_plug_src.h.C28FC2D7F47FCCAA.idx  IGraphics_select.h.B757DE4EA7C03257.idx  IPlugAPIBase.cpp.7FE3BA5860FD5B75.idx  IPlugAPIBase.h.306DCE3E7877CE4E.idx  IPlugAU.cpp.F70CD7E57A5EA878.idx  IPlugAU.h.2B56D1586ADBDE52.idx  IPlugAU_ioconfig.h.5ADF3968298EB343.idx  IPlugAU_view_factory.mm.FA8DFF3DC6D5B99D.idx  IPlugConstants.h.1A824D2BEDDFDF2F.idx  IPlugDelegate_select.h.95DBA4E93BA36012.idx  IPlugEditorDelegate.h.77528BC91532E4EE.idx  IPlugLogger.h.2E05585DF55C8A4E.idx  IPlugMidi.h.343C0F9E3EE8DEF4.idx  IPlugParameter.cpp.31DD8A151A884138.idx  IPlugParameter.h.D3D9471D937C6558.idx  IPlugPaths.cpp.53E07C536D374335.idx  IPlugPaths.h.4AF5A0B7F42ED8D3.idx  IPlugPlatform.h.2C1AFDD14B7509EB.idx  IPlugPluginBase.cpp.25F9E66E6AC3827C.idx  IPlugPluginBase.h.C614642ADDE0CC68.idx  IPlugProcessor.cpp.73A0911372A15536.idx  IPlugProcessor.h.7CDC8DC9B0D58A06.idx  IPlugQueue.h.62AA2965D6C14644.idx  (+386 more)
MangroveIPlug/: CMakeLists.txt  MangroveIPlug.RPP  MangroveIPlug.cpp  MangroveIPlug.h  MangroveIPlug.sln  README.md  compressor_chain.h  config.h
MangroveIPlug/build-mac/Debug/: AUv3Framework.framework  MangroveIPlug.aaxplugin  MangroveIPlug.app  MangroveIPlug.appex  MangroveIPlug.component  MangroveIPlug.vst  MangroveIPlug.vst3
MangroveIPlug/config/: MangroveIPlug-ios.xcconfig  MangroveIPlug-mac.xcconfig  MangroveIPlug-wasm.mk  MangroveIPlug-web.mk  MangroveIPlug-win.props
MangroveIPlug/docs/: BUILDING.md
MangroveIPlug/projects/: MangroveIPlug-aax.vcxproj  MangroveIPlug-aax.vcxproj.filters  MangroveIPlug-app.vcxproj  MangroveIPlug-app.vcxproj.filters  MangroveIPlug-clap.vcxproj  MangroveIPlug-clap.vcxproj.filters  MangroveIPlug-vst2.vcxproj  MangroveIPlug-vst2.vcxproj.filters  MangroveIPlug-vst3.vcxproj  MangroveIPlug-vst3.vcxproj.filters  MangroveIPlug-wam-controller.mk  MangroveIPlug-wam-processor.mk  MangroveIPlug-wasm-dsp.mk  MangroveIPlug-wasm-ui.mk  compressor_chain.cpp
MangroveIPlug/resources/: AUv3Framework.h  IPlugAUViewController_vMangroveIPlug.xib  MangroveIPlug-AAX-Info.plist  MangroveIPlug-AU-Info.plist  MangroveIPlug-CLAP-Info.plist  MangroveIPlug-Pages.xml  MangroveIPlug-VST2-Info.plist  MangroveIPlug-VST3-Info.plist  MangroveIPlug-iOS-AUv3-Info.plist  MangroveIPlug-iOS-Info.plist  MangroveIPlug-iOS-MainInterface.storyboard  MangroveIPlug-iOS-launchScreen.storyboard  MangroveIPlug-macOS-AUv3-Info.plist  MangroveIPlug-macOS-AUv3Framework-Info.plist  MangroveIPlug-macOS-Info.plist  MangroveIPlug-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
MangroveIPlug/scripts/: makedist-web.sh  prepare_resources-mac.py
MangrovePlugin/: CMakeLists.txt  MangrovePlugin.RPP  MangrovePlugin.cpp  MangrovePlugin.h  MangrovePlugin.sln  README.md  config.h
MangrovePlugin/config/: MangrovePlugin-ios.xcconfig  MangrovePlugin-mac.xcconfig  MangrovePlugin-wasm.mk  MangrovePlugin-web.mk  MangrovePlugin-win.props
MangrovePlugin/projects/: MangrovePlugin-aax.vcxproj  MangrovePlugin-aax.vcxproj.filters  MangrovePlugin-app.vcxproj  MangrovePlugin-app.vcxproj.filters  MangrovePlugin-clap.vcxproj  MangrovePlugin-clap.vcxproj.filters  MangrovePlugin-vst2.vcxproj  MangrovePlugin-vst2.vcxproj.filters  MangrovePlugin-vst3.vcxproj  MangrovePlugin-vst3.vcxproj.filters  MangrovePlugin-wam-controller.mk  MangrovePlugin-wam-processor.mk  MangrovePlugin-wasm-dsp.mk  MangrovePlugin-wasm-ui.mk
MangrovePlugin/resources/: AUv3Framework.h  IPlugAUViewController_vMangrovePlugin.xib  MangrovePlugin-AAX-Info.plist  MangrovePlugin-AU-Info.plist  MangrovePlugin-CLAP-Info.plist  MangrovePlugin-Pages.xml  MangrovePlugin-VST2-Info.plist  MangrovePlugin-VST3-Info.plist  MangrovePlugin-iOS-AUv3-Info.plist  MangrovePlugin-iOS-Info.plist  MangrovePlugin-iOS-MainInterface.storyboard  MangrovePlugin-iOS-launchScreen.storyboard  MangrovePlugin-macOS-AUv3-Info.plist  MangrovePlugin-macOS-AUv3Framework-Info.plist  MangrovePlugin-macOS-Info.plist  MangrovePlugin-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
MangrovePlugin/scripts/: makedist-web.sh
Source/DSP/: CMakeLists.txt  compressor_chain.cpp  compressor_chain.h
Source/Plugin/: CMakeLists.txt  Info.plist.au  Info.plist.vst3  MangrovePlugin.cpp  MangrovePlugin.h  MangroveUI.cpp  MangroveUI.h  config.h
Source/VST3/: CMakeLists.txt  Info.plist.vst3  MangrovePlugin.cpp  MangrovePlugin.h  config.h
Source_Original/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  nassau_logo_shadow.c
Tests/: CMakeLists.txt  dsp_tests.cpp
ai/plans/: README.md  STATE.md
build_phase5/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_phase5/Tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dsp_tests
build_vst3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_vst3/Tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_xcode/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
build_xcode/CMakeScripts/: ReRunCMake.make
build_xcode/MangroveCompressor.xcodeproj/: project.pbxproj
build_xcode/Tests/: CTestTestfile.cmake  cmake_install.cmake
docs/: BUILDING.md  BUILDING_WIN11.md
(+448 files in other folders)
